sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:13: error: value toint is not a member of Double
    ecart=(ecart/1.3).toint
                      ^